# Course_Work_TP

./: README.md
CourseWork/: CMakeLists.txt  choosingstory.cpp  choosingstory.h  choosingstory.ui  cpm.cpp  cpm.h  cpm.ui  cpm_end.cpp  cpm_end.h  cpm_end.ui  cpm_follow.cpp  cpm_follow.h  cpm_follow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  traum.cpp  traum.h  traum.ui  traum_end.cpp  traum_end.h  traum_end.ui  traum_follow.cpp  traum_follow.h  traum_follow.ui
CourseWork/Data/: CmakeLists.txt
CourseWork/Data/Cpm/: 1.txt  11.txt  13.txt  3.txt  9.txt  CmakeLists.txt
CourseWork/Data/Traum/: 14.txt  7.txt  9.txt
CourseWork/Data/Traum/bu/: 1.txt  15.txt  17.txt  18.txt  2.txt  7.txt
Data/Traum/: 13.txt  19.txt  3.txt  4.txt  5.txt  8.txt
Data/Техническая поддержка молящихся/: 1.txt  10.txt  12.txt  2.txt  4.txt  7.txt  8.txt
Documentation/: Doxyfile  Отчет.docx
Documentation/html/: annotated.html  choosingstory_8cpp.html  choosingstory_8h.html  choosingstory_8h_source.html  class_choosing_story-members.html  class_choosing_story.html  class_cpm-members.html  class_cpm.html  class_cpm___end-members.html  class_cpm___end.html  class_cpm___follow-members.html  class_cpm___follow.html  class_main_window-members.html  class_main_window.html  class_traum-members.html  class_traum.html  class_traum___end-members.html  class_traum___end.html  class_traum___follow-members.html  class_traum___follow.html  classes.html  cpm_8cpp.html  cpm_8h.html  cpm_8h_source.html  cpm__end_8cpp.html  cpm__end_8h.html  cpm__end_8h_source.html  cpm__follow_8cpp.html  cpm__follow_8h.html  cpm__follow_8h_source.html  dir_0771f85a527d6ab307d98a3a7ddb771f.html  dir_67594a5771178b2ba1ee1541519e4315.html  dir_c7a15cb74fa72b419f10875903789323.html  dir_d175bb2fb2da23df94be85003247b7ab.html  dir_ed64abda99f47a06cf93fdb52985a8a1.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  (+13 more)
Documentation/latex/: annotated.tex  choosingstory_8cpp.tex  (+34 more)
(+14 files in other folders)
